lender/tests/fail/try_collect.stderr
error[E0597]: `lender` does not live long enough
  --> tests/fail/try_collect.rs:40:55
   |
25 |     let mut lender = lender::from_fn(
   |         ---------- binding `lender` declared here
...
40 |     let wrapper: ChangeOutputType<Result<(), _>, _> = lender.try_collect::<Wrapper<TryShunt<'_, _>>>();
   |                                                       ^^^^^^------------------------------------------
   |                                                       |
   |                                                       borrowed value does not live long enough
   |                                                       argument requires that `lender` is borrowed for `'static`
...
49 | }
   | - `lender` dropped here while still borrowed
   |
note: requirement that the value outlives `'static` introduced here
  --> src/traits/lender.rs
   |
   |         for<'all> B: FromLender<TryShunt<'all, &'a mut Self>>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: implementation of `lender::FromLender` is not general enough
  --> tests/fail/try_collect.rs:40:55
   |
40 |     let wrapper: ChangeOutputType<Result<(), _>, _> = lender.try_collect::<Wrapper<TryShunt<'_, _>>>();
   |                                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `lender::FromLender` is not general enough
   |
   = note: `Wrapper<lender::TryShunt<'2, &mut lender::FromFn<(), {closure@$DIR/src/higher_order.rs:157:15: 157:43}>>>` must implement `lender::FromLender<lender::TryShunt<'1, &mut lender::FromFn<(), {closure@$DIR/src/higher_order.rs:157:15: 157:43}>>>`, for any lifetime `'1`...
   = note: ...but it actually implements `lender::FromLender<lender::TryShunt<'2, &mut lender::FromFn<(), {closure@$DIR/src/higher_order.rs:157:15: 157:43}>>>`, for some specific lifetime `'2`
